clusters/dev/apps/deara/addons/clawhost-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clawhost-api
  namespace: app-deara-dev
spec:
  type: ExternalName
  externalName: clawhost-dev.app-clawhost-dev.svc.cluster.local
